*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@564 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/tast.properties
+++ b/src/tast.properties
@@ -26,18 +26,22 @@ mapserver.mapfile.skeleton = ${mapserver.mapfile.dir}\\tast_map_skeleton.map
 mapserver.mapfile.output = ${mapserver.mapfile.dir}\\map_{TIME}.map
 map.layer.status.continents.userlabel=Continents
 map.layer.status.boundries.userlabel=Boundries
+map.layer.status.boundries.default=OFF
 map.layer.status.rivers.userlabel=Rivers
+map.layer.status.rivers.default=OFF
 map.layer.status.winds.userlabel=Wind flows
+map.layer.status.winds.default=OFF
 map.layer.status.flows.userlabel=Water flows
+map.layer.status.flows.default=OFF
 map.layer.status.regions.userlabel=Regions
 
 
 # this should be clear, also it depends on the
 # selected projection
-map.default.extent.x.min = -180
-map.default.extent.x.max = 180
-map.default.extent.y.min = -90
-map.default.extent.y.max = 90
+map.default.extent.x.min = -100
+map.default.extent.x.max = 40
+map.default.extent.y.min = -40
+map.default.extent.y.max = 50
 
 # This determines the farthest and the closest view on
 # the map. The scale on the map is implemented as an
@@ -59,7 +63,7 @@ map.default.extent.y.max = 90
 # max = ---------------------  <-->  map.max.magnification 
 #         map.scale.factor
 #
-map.scale.factor = 1
+map.scale.factor = 4
 map.max.magnification = 100
 
 #images
