--- a/src/tast.properties
+++ b/src/tast.properties
@@ -69,12 +69,9 @@ map.max.magnification = 100
 #images
 #images.dir = D:\\Library\\SlaveTrade\\projects\\.metadata\\.plugins\\org.eclipse.wst.server.core\\tmp0\\webapps\\TransAtlanticSlaveTrade\\images
 #images.dir = /home/juri/workspace/tast/WebContent/images
-images.dir = C:\\Program Files\\Apache Software Foundation\\Tomcat 5.5\\webapps\\tast\\images
+images.dir = C:\\Documents and Settings\\jzich\\My Documents\\TAST\\projects\\.metadata\\.plugins\\org.eclipse.wst.server.core\\tmp0\\webapps\\tast\\images
 images.title.maxlen = 200
 images.creator.maxlen = 200
 images.source.maxlen = 500
 images.references.maxlen = 500
 images.emorylocation.maxlen = 500
-
-#eventline
-eventline.image.dir = C:\\Program Files\\Apache Software Foundation\\Tomcat 5.5\\webapps\\tast\\eventline
