*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@692 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -1,3 +1,4 @@
+#Resources for database part (database directory in Web-inf)
 database_voyage_voyagedetail=Voyage detail
 database_voyage_voyagevariables=Voyage variables
 database_voyage_voyagemap=Voyage map
@@ -40,3 +41,40 @@ database_search_customgraphs=Custom graphs
 database_search_summarystats=Summary statistics
 database_search_maps=Maps
 database_search_selecttimeframe=Select time frame
+
+#Resources for estimates (estimates directory in Web-inf)
+estimates_table_natcarier=National carriers
+estimates_table_expregions=Export regions
+estimates_table_impregions=Import regions
+estimates_table_impregionsbreakdown=Import regions (breakdowns)
+estimates_table_individualyears=Individual years
+estimates_table_5years=5 year period
+estimates_table_10years=10 year period
+estimates_table_25years=25 year period
+estimates_table_50years=50 year period
+estimates_table_100years=100 year period
+estimates_table_rows=Rows
+estimates_table_columns=Columns
+estimates_table_show=Show
+estimates_table_expimp=Exported/Imported
+estimates_table_onlyexp=Only exported
+estimates_table_onlyimp=Only imported
+estimates_table_omitempty=Omit empty
+estimates_left_from=From
+estimates_left_to=To
+estimates_left_natcarriers=National carriers
+estimates_left_expregions=Export regions
+estimates_left_impregions=Import regions
+estimates_left_currentquery=Current query
+estimates_left_selectednations=Selected national carriers:
+estimates_left_selectedexport=Selected export regions:
+estimates_left_selectedimport=Selected import regions:
+estimates_left_changeselection=Change selection
+estimates_main_table=Table
+estimates_main_list=Listing
+estimates_main_map=Map
+estimates_main_timeline=Timeline
+estimates_list_showing=Showing
+estimates_list_outof=out of
+estimates_list_show=Show
+estimates_list_resperpage=results per page.
