*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@693 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -78,3 +78,27 @@ estimates_list_showing=Showing
 estimates_list_outof=out of
 estimates_list_show=Show
 estimates_list_resperpage=results per page.
+
+#code resources
+estimates_map_location=Location :
+estimates_map_leg_slavnum=Number of slaves
+estimates_map_leg_places=Places
+estimates_map_leg_embplace=Place of embarkation
+estimates_map_leg_disembplace=Place of disembarkation
+estimates_map_leg_bothplaces=Place of embarkatrion / disembarkation
+
+database_attributes_voyageid=Voyage ID
+database_attributes_cd=CD 1999
+database_attributes_shipname=Name of ship
+database_attributes_placcons=Place of construction
+database_attributes_yrcons=Year of construction
+database_attributes_placereg=Place of registration
+database_attributes_yrreg=Year of registration
+database_attributes_yrreg")"Imputed nation
+database_attributes_natinimp=Imputed nation
+database_attributes_rig=Vessel rig
+database_attributes_tonnage=Tonnage
+database_attributes_tonmod=Standardized tonnage
+database_attributes_guns=Number of guns
+database_attributes_owners=Owners
+
