*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@699 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -87,6 +87,13 @@ estimates_map_leg_embplace=Place of embarkation
 estimates_map_leg_disembplace=Place of disembarkation
 estimates_map_leg_bothplaces=Place of embarkatrion / disembarkation
 
+estimates_table_exported=Exported
+estimates_table_imported=Imported
+estimates_table_totals=Totals
+estimates_timeline_exported=Exported
+estimates_timeline_imported=Imported
+
+
 database_attributes_voyageid=Voyage ID
 database_attributes_cd=CD 1999
 database_attributes_shipname=Name of ship
@@ -102,3 +109,48 @@ database_attributes_tonmod=Standardized tonnage
 database_attributes_guns=Number of guns
 database_attributes_owners=Owners
 
+components_gallery_source=Source
+components_gallery_creator=Creator
+components_gallery_voyage=Voyage
+components_gallery_id=ID
+components_map_legendgroup=Legend group:
+components_search_timeframe=Time frame:
+components_search_yes=Yes
+components_search_no=No
+components_search_is=is
+components_search_anything=[anything]
+components_search_between=is between
+components_search_and=and
+components_search_isatmost=is at most
+components_search_isatleast=is at least
+components_search_isequal=is equal
+components_search_or=or
+components_search_delete=delete
+components_search_restore=restore
+components_search_permlink=permlink
+components_search_nothingselected=nothing selected
+components_search_select=Select
+components_search_quicksearch=Quicksearch
+components_search_ok=OK
+components_search_selall=Select all
+components_search_deselall=Deselect all
+components_search_jan=Jan
+components_search_feb=Feb
+components_search_mar=Mar
+components_search_apr=Apr
+components_search_may=May
+components_search_jun=Jun
+components_search_jul=Jul
+components_search_aug=Aug
+components_search_sep=Sep
+components_search_oct=Oct
+components_search_nov=Nov
+components_search_dec=Dec
+components_search_after=After
+components_search_before=Before
+components_search_in=In
+components_search_between=Between
+components_search_atleast=At least
+components_search_atmost=At most
+components_search_isequalto=Is equal to
+components_search_between=Between
