*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@704 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -154,3 +154,81 @@ components_search_atleast=At least
 components_search_atmost=At most
 components_search_isequalto=Is equal to
 components_search_between=Between
+components_charts_avg=Avg 
+components_charts_min=Min 
+components_charts_max=Max 
+components_charts_sum=Sum 
+components_charts_count=Count
+components_charts_xy=XY chart
+components_charts_bar=Bar chart 
+components_charts_pie=Pie chart
+components_charts_piemoreseries=Pie chart should have only one series. All series besides first will be ignored.
+components_charts_seriesadded=Series has already been added.
+components_charts_toomanyres1=Current query returns more than
+components_charts_toomanyres2=results. Graph shows chunks of data by
+components_charts_toomanyres3=Use arrow buttons below to navigate between visible chunks. 
+components_charts_toomanyres4=Currently visible results from
+components_charts_toomanyres5=to
+components_charts_barvalue=Value
+components_charts_xyvalue=Value
+components_timeline_stat_numofvoyages=Number of voyages
+components_timeline_stat_averagetonnage=Average tonnage
+components_timeline_stat_averagetonnagestand=Average tonnage (standardized)
+components_timeline_stat_averageguns=Average number of guns
+components_timeline_stat_rateresistance=Rate of resistance
+components_timeline_stat_averagedurationfirst=Average duration of first leg of voyage (days)
+components_timeline_stat_averagedurationmiddle=Average duration of middle passage (days)
+components_timeline_stat_averagecrew=Average crew at outset
+components_timeline_stat_averagecrewfirst=Average crew at first landing of slaves
+components_timeline_stat_crewdeaths=Number of crew deaths
+components_timeline_stat_averagecrewdeaths=Average crew deaths
+components_timeline_stat_intnumpurchases=Intended number of purchases
+components_timeline_stat_averageintpurchases=Average intended purchases
+components_timeline_stat_totalnumcaptivesemb=Total number of captives embarked
+components_timeline_stat_averagenumcaptivesemb=Average number of captives embarked
+components_timeline_stat_totalnumcaptivesdisemb=Total number of captives disembarked
+components_timeline_stat_averagenumcaptivesdisemb=Average number of captives disembarked
+components_timeline_stat_percentmen=Percent men (among captives)
+components_timeline_stat_percentwomen=Percent women (among captives)
+components_timeline_stat_percentboys=Percent boys (among captives)
+components_timeline_stat_percentgirls=Percent girls (among captives)
+components_timeline_stat_percentmales=Percent males (among captives)
+components_timeline_stat_percentchildren=Percent children (among captives)
+components_timeline_stat_averageprice=Average price (standardized)
+components_timeline_stat_numdeaths=Number of slave deaths
+components_timeline_stat_averagedeaths=Average slave deaths
+components_timeline_stat_mortrate=Slave mortality rate
+components_statistictab_slavemb=Slaves embarked
+components_statistictab_slavdisemb=Slaves disembarked
+components_statistictab_slavdead=Share of slaves embarked who died during voyage 
+components_statistictab_lenmiddlepass=Length of Middle Passage (in days) 
+components_statistictab_percentmale=Percentage male
+components_statistictab_percentchil=Percentage children 
+components_statistictab_tonnagevessel=Tonnage of vessel
+components_statistictab_crewatoutset=Number of crew at outset
+components_statistictab_total=Total
+components_statistictab_total=Number of voyages
+components_statistictab_total=Average
+components_statistictab_notavailable=not available
+components_table_compoundattr=Compound attribute
+components_table_missingid=MISSING
+components_detailmap_location=Location
+components_estimate_nationcarrierattr=National carrier
+components_estimate_yearattr=Year
+components_estimate_impregionattr=Import region
+components_estimate_expregionattr=Export region
+components_estimate_exportedattr=Exported
+components_estimate_importedattr=Imported
+components_utilsdate_weeks=weeks
+components_utilsdate_days=days
+components_utilsdate_hours=hours
+components_utilsdate_mins=min
+components_utilsdate_secs=sec
+components_utilsdate_mss=ms
+components_utilsdate_week=week
+components_utilsdate_day=day
+components_utilsdate_hour=hour
+components_utilsdate_min=min
+components_utilsdate_sec=sec
+components_utilsdate_ms=ms
+
