*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@723 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -29,8 +29,8 @@ database_search_width=Width:
 database_search_height=Height:
 database_search_from=From
 database_search_to=To
-database_search_basic=Basic
-database_search_general=General
+database_search_basic=Basic variables
+database_search_general=General variables
 database_search_currentquery=Current query
 database_search_searchbutton=Search
 database_search_newquery=New query
