*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@728 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -4,7 +4,7 @@ database_voyage_voyagevariables=Voyage variables
 database_voyage_voyagemap=Voyage map
 database_search_showing=Showing
 database_search_outof=out of
-database_search_showandline=| Show 
+database_search_showandline=, display 
 database_search_resperpage=  results per page.
 database_search_configcolumns=Configure columns
 database_search_choosegroupofvariables=Choose group of variables
