--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -60,8 +60,8 @@ estimates_table_expimp=Exported/Imported
 estimates_table_onlyexp=Only exported
 estimates_table_onlyimp=Only imported
 estimates_table_omitempty=Omit empty
-estimates_left_from=From
-estimates_left_to=To
+estimates_left_from=Show data only from
+estimates_left_to=to
 estimates_left_natcarriers=National carriers
 estimates_left_expregions=Export regions
 estimates_left_impregions=Import regions
