*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@742 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/tast.properties
+++ b/src/tast.properties
@@ -53,7 +53,7 @@ map.max.magnification = 500
 #images.dir = D:\\Library\\SlaveTrade\\projects\\.metadata\\.plugins\\org.eclipse.wst.server.core\\tmp0\\webapps\\TransAtlanticSlaveTrade\\images
 #images.dir = /home/juri/workspace/tast/WebContent/images
 #images.dir = D:\\Emory\\TAST\\projects\\.metadata\\.plugins\\org.eclipse.wst.server.core\\tmp0\\webapps\\tast\\images
-images.dir = C:\\Documents and Settings\\jzich\\My Documents\\TAST\\projects\\.metadata\\.plugins\\org.eclipse.wst.server.core\\tmp0\\webapps\\tast\\images
+images.dir = C:\\Documents and Settings\\jzich\\My Documents\\TAST\\projects\\.metadata\\.plugins\\org.eclipse.wst.server.core\\tmp0\\webapps\\tast\\images-database
 images.title.maxlen = 200
 images.creator.maxlen = 200
 images.source.maxlen = 500
