*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@746 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -45,8 +45,8 @@ database_search_selecttimeframe=Select time frame
 #Resources for estimates (estimates directory in Web-inf)
 estimates_table_natcarier=National carriers
 estimates_table_expregions=Export regions
-estimates_table_impregions=Import regions
-estimates_table_impregionsbreakdown=Import regions (breakdowns)
+estimates_table_impregions=Broad import regions
+estimates_table_impregionsbreakdown=Specific import regions
 estimates_table_individualyears=Individual years
 estimates_table_5years=5 year period
 estimates_table_10years=10 year period
@@ -60,6 +60,7 @@ estimates_table_expimp=Exported/Imported
 estimates_table_onlyexp=Only exported
 estimates_table_onlyimp=Only imported
 estimates_table_omitempty=Omit empty
+estimates_left_timeframe=Time frame
 estimates_left_from=Show data only from
 estimates_left_to=to
 estimates_left_natcarriers=National carriers
@@ -70,6 +71,7 @@ estimates_left_selectednations=Selected national carriers:
 estimates_left_selectedexport=Selected export regions:
 estimates_left_selectedimport=Selected import regions:
 estimates_left_changeselection=Change selection
+estimates_left_resetselection=Reset to default
 estimates_main_table=Table
 estimates_main_list=Listing
 estimates_main_map=Map
