*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@750 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -234,3 +234,16 @@ components_utilsdate_min=min
 components_utilsdate_sec=sec
 components_utilsdate_ms=ms
 
+#images
+images_vessels=Vessels
+images_vessels_link=See all images of vessels ...
+images_slaves=Slaves
+images_slaves_link=See all images of slaves ...
+images_slavers=Slavers
+images_slavers_link=See all images of slavers ...
+images_ports=Ports
+images_ports_link=See all images of ports ...
+images_regions=Regions
+images_regions_link=See all images of regions ...
+
+
