*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@751 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -1,5 +1,5 @@
 #Resources for database part (database directory in Web-inf)
-database_voyage_voyagedetail=Voyage detail
+database_voyage_voyagedetail=Voyage ID = 
 database_voyage_voyagevariables=Voyage variables
 database_voyage_voyagemap=Voyage map
 database_search_showing=Showing
