--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -245,5 +245,10 @@ images_ports=Ports
 images_ports_link=See all images of ports ...
 images_regions=Regions
 images_regions_link=See all images of regions ...
-
-
+images_query_title=Images
+images_query_showing=Showing images
+images_query_title_containing=containing
+images_query_title_from=from category
+images_query_title_originated=originated
+images_query_title_before=before
+images_query_title_after=after
