*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@756 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -252,3 +252,6 @@ images_query_title_from=from category
 images_query_title_originated=originated
 images_query_title_before=before
 images_query_title_after=after
+images_next_detail_image=Next image > 
+images_prev_detail_image=< Previous image
+images_back=Go back
