*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@760 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -208,9 +208,9 @@ components_statistictab_percentmale=Percentage male
 components_statistictab_percentchil=Percentage children 
 components_statistictab_tonnagevessel=Tonnage of vessel
 components_statistictab_crewatoutset=Number of crew at outset
-components_statistictab_total=Total
-components_statistictab_total=Number of voyages
-components_statistictab_total=Average
+components_statistictab_total_slaves=Total slaves
+components_statistictab_total_voyages=Total voyages
+components_statistictab_average=Average
 components_statistictab_notavailable=not available
 components_table_compoundattr=Compound attribute
 components_table_missingid=MISSING
@@ -233,6 +233,12 @@ components_utilsdate_hour=hour
 components_utilsdate_min=min
 components_utilsdate_sec=sec
 components_utilsdate_ms=ms
+
+#names
+components_names_attributes_id=ID
+components_names_attributes_voyageid=Voyage ID
+components_names_attributes_name=Name
+components_names_attributes_shipname=Ship name
 
 #images
 images_vessels=Vessels
