--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -239,6 +239,16 @@ components_names_attributes_id=ID
 components_names_attributes_voyageid=Voyage ID
 components_names_attributes_name=Name
 components_names_attributes_shipname=Ship name
+components_names_attributes_age=Age
+components_names_attributes_height=Height
+components_names_attributes_datearr=Date of arrival
+components_names_attributes_source=Source
+components_names_attributes_country=Country
+components_names_attributes_sexage=Sex/Age
+components_names_attributes_majselp=Majselpt
+components_names_attributes_majbuypt=MajBuypt
+
+
 
 #images
 images_vessels=Vessels
