*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@770 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -234,22 +234,6 @@ components_utilsdate_min=min
 components_utilsdate_sec=sec
 components_utilsdate_ms=ms
 
-#names
-components_names_attributes_id=ID
-components_names_attributes_voyageid=Voyage ID
-components_names_attributes_name=Name
-components_names_attributes_shipname=Ship name
-components_names_attributes_age=Age
-components_names_attributes_height=Height
-components_names_attributes_datearr=Date of arrival
-components_names_attributes_source=Source
-components_names_attributes_country=Country
-components_names_attributes_sexage=Sex/Age
-components_names_attributes_majselpt=Majselpt
-components_names_attributes_majbuypt=MajBuypt
-
-
-
 #images
 images_vessels=Vessels
 images_vessels_link=See all images of vessels ...
@@ -271,3 +255,35 @@ images_query_title_after=after
 images_next_detail_image=Next image > 
 images_prev_detail_image=< Previous image
 images_back=Go back
+
+#slaves
+components_names_attributes_id=ID
+components_names_attributes_voyageid=Voyage ID
+components_names_attributes_name=Name
+components_names_attributes_shipname=Ship name
+components_names_attributes_age=Age
+components_names_attributes_height=Height
+components_names_attributes_datearr=Date of arrival
+components_names_attributes_source=Source
+components_names_attributes_country=Country
+components_names_attributes_sexage=Sex/Age
+components_names_attributes_majselpt=Majselpt
+components_names_attributes_majbuypt=MajBuypt
+slaves_query_title=Search for slaves
+slaves_checkbox_boys=boys
+slaves_checkbox_man=man
+slaves_checkbox_males=males
+slaves_checkbox_girls=girls
+slaves_checkbox_woman=woman
+slaves_checkbox_females=females
+slaves_query_sexage=Sex & age
+slaves_query_age=Age
+slaves_query_age_from=Between
+slaves_query_age_to=and
+slaves_query_height=Height
+slaves_query_height_from=Between
+slaves_query_height_to=and
+slaves_query_slave_name=Slave
+slaves_query_ship_name=Ship
+slaves_query_country=Country
+slaves_query_exp_port=Embarkation
