*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@773 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -245,6 +245,8 @@ images_ports=Ports
 images_ports_link=See all images of ports ...
 images_regions=Regions
 images_regions_link=See all images of regions ...
+images_manuscripts=Manuscripts
+images_manuscripts_link=See all images of manuscripts ...
 images_query_title=Images
 images_query_showing=Showing images
 images_query_title_containing=containing
@@ -264,12 +266,12 @@ components_names_attributes_name=Name
 components_names_attributes_shipname=Ship name
 components_names_attributes_age=Age
 components_names_attributes_height=Height
-components_names_attributes_datearr=Date of arrival
+components_names_attributes_datearr=Arrival
 components_names_attributes_source=Source
 components_names_attributes_country=Country
 components_names_attributes_sexage=Sex/Age
-components_names_attributes_majselpt=Majselpt
-components_names_attributes_majbuypt=MajBuypt
+components_names_attributes_majselpt=Captured
+components_names_attributes_majbuypt=Embarkation
 slaves_query_title=Search for slaves
 slaves_checkbox_boys=boys
 slaves_checkbox_man=man
@@ -277,7 +279,7 @@ slaves_checkbox_males=males
 slaves_checkbox_girls=girls
 slaves_checkbox_woman=woman
 slaves_checkbox_females=females
-slaves_query_sexage=Sex & age
+slaves_query_sexage=Sex/Age
 slaves_query_age=Age
 slaves_query_age_from=Between
 slaves_query_age_to=and
@@ -288,3 +290,6 @@ slaves_query_slave_name=Slave
 slaves_query_ship_name=Ship
 slaves_query_country=Country
 slaves_query_exp_port=Embarkation
+slaves_query_captured=Captured
+slaves_captured_sierra_leone=Sierra Leone
+slaves_captured_havana=Havana
