*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@785 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -288,8 +288,9 @@ slaves_query_height_from=Between
 slaves_query_height_to=and
 slaves_query_slave_name=Slave
 slaves_query_ship_name=Ship
-slaves_query_country=Country
-slaves_query_exp_port=Embarkation
+slaves_query_country=Country of origin
+slaves_query_place=Place of capture and embarkation 
 slaves_query_captured=Captured
 slaves_captured_sierra_leone=Sierra Leone
 slaves_captured_havana=Havana
+slaves_query_embarkation=Place of embarkation
