*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@789 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -265,32 +265,40 @@ components_names_attributes_voyageid=Voyage ID
 components_names_attributes_name=Name
 components_names_attributes_shipname=Ship name
 components_names_attributes_age=Age
-components_names_attributes_height=Height
+components_names_attributes_height=Height (inches)
 components_names_attributes_datearr=Arrival
 components_names_attributes_source=Source
 components_names_attributes_country=Country
 components_names_attributes_sexage=Sex/Age
-components_names_attributes_majselpt=Captured
+components_names_attributes_majselpt=Disembarkation
 components_names_attributes_majbuypt=Embarkation
 slaves_query_title=Search for slaves
+slaves_listing_title=Liberated Africans
+slaves_query_year=Time frame
+slaves_query_year_to=up to
+slaves_query_year_from=from
 slaves_checkbox_boys=boys
-slaves_checkbox_man=man
+slaves_checkbox_man=men
 slaves_checkbox_males=males
 slaves_checkbox_girls=girls
-slaves_checkbox_woman=woman
+slaves_checkbox_woman=women
 slaves_checkbox_females=females
 slaves_query_sexage=Sex/Age
 slaves_query_age=Age
-slaves_query_age_from=Between
-slaves_query_age_to=and
-slaves_query_height=Height
-slaves_query_height_from=Between
-slaves_query_height_to=and
-slaves_query_slave_name=Slave
-slaves_query_ship_name=Ship
-slaves_query_country=Country of origin
-slaves_query_place=Place of capture and embarkation 
-slaves_query_captured=Captured
+slaves_query_age_from=from
+slaves_query_age_to=up to
+slaves_query_height=Height (inches)
+slaves_query_height_from=at least
+slaves_query_height_to=up to
+slaves_query_slave_name=Slave name
+slaves_query_ship_name=Ship name
+slaves_query_country=Place of origin
+slaves_query_place=Embarkation and disembarkation  
+slaves_query_captured=Disembarkation
 slaves_captured_sierra_leone=Sierra Leone
 slaves_captured_havana=Havana
 slaves_query_embarkation=Place of embarkation
+slaves_search_button=Search
+slaves_reset_button=Reset to default
+slaves_current_query=Current query
+slaves_current_no_query=There are currently no conditions in your query. The listing on the right shows all slaves in the database.
