*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@793 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -234,6 +234,9 @@ components_utilsdate_min=min
 components_utilsdate_sec=sec
 components_utilsdate_ms=ms
 
+#checkbox list component
+checkbox_list_select_deselect_all=All items
+
 #images
 images_vessels=Vessels
 images_vessels_link=See all images of vessels ...
