*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@795 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -41,6 +41,7 @@ database_search_customgraphs=Custom graphs
 database_search_summarystats=Summary statistics
 database_search_maps=Maps
 database_search_selecttimeframe=Select time frame
+database_search_expected=Results: {0,number,#,###,###}
 
 #Resources for estimates (estimates directory in Web-inf)
 estimates_table_natcarier=National carriers
@@ -305,3 +306,4 @@ slaves_search_button=Search
 slaves_reset_button=Reset to default
 slaves_current_query=Current query
 slaves_current_no_query=There are currently no conditions in your query. The listing on the right shows all slaves in the database.
+slaves_expected=Results: {0,number,#,###,###}
