*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@797 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -303,7 +303,7 @@ slaves_captured_sierra_leone=Sierra Leone
 slaves_captured_havana=Havana
 slaves_query_embarkation=Place of embarkation
 slaves_search_button=Search
-slaves_reset_button=Reset to default
+slaves_reset_button=New query
 slaves_current_query=Current query
 slaves_current_no_query=There are currently no conditions in your query. The listing on the right shows all slaves in the database.
-slaves_expected=Results: {0,number,#,###,###}
+slaves_search_expected=Results: {0,number,#,###,###}
