--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -307,3 +307,4 @@ slaves_reset_button=New query
 slaves_current_query=Current query
 slaves_current_no_query=There are currently no conditions in your query. The listing on the right shows all slaves in the database.
 slaves_search_expected=Results: {0,number,#,###,###}
+slaves_all_port_selected=all ports selected
