*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@814 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -18,8 +18,10 @@ database_search_fixerror=Fix error
 database_search_back=Back
 database_search_chartsetup=Chart setup
 database_search_currentseries=Current series
-database_search_xaxisval=X axis value:
-database_search_yaxisval=Y axis value:
+database_search_xaxisval=X axis
+database_search_yaxisval=Y axis
+database_search_order=Order
+database_graph_type=Graph type
 database_search_addseries=Add series
 database_search_remseries=Remove selected
 database_search_noseriesmsg=No series added
