--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -310,3 +310,7 @@ slaves_current_query=Current query
 slaves_current_no_query=There are currently no conditions in your query. The listing on the right shows all slaves in the database.
 slaves_search_expected=Results: {0,number,#,###,###}
 slaves_all_port_selected=all ports selected
+
+
+submissions_oryginal_voyage=Current voyage
+submissions_changed_voyage=Changed voyage
