*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@851 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -314,3 +314,4 @@ slaves_all_port_selected=all ports selected
 
 submissions_oryginal_voyage=Current voyage
 submissions_changed_voyage=Changed voyage
+submissions_suggested_voyage=Suggested change #
