*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@861 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -251,8 +251,8 @@ images_ports=Ports
 images_ports_link=See all images of ports ...
 images_regions=Regions
 images_regions_link=See all images of regions ...
-images_manuscripts=Manuscripts
-images_manuscripts_link=See all images of manuscripts ...
+images_manuscripts=Artifacts
+images_manuscripts_link=See all images of artifacts ...
 images_query_title=Images
 images_query_showing=Showing images
 images_query_title_containing=containing
