*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@896 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/build.xml
+++ b/build.xml
@@ -39,6 +39,7 @@
 			<exclude name="attribute-groups.xml" />
 			<exclude name="searchable-attributes.xml" />
 			<exclude name="table-attributes.xml" />
+			<exclude name="submission-attributes.xml" />
 		</jar>
 	</target>
 
@@ -55,6 +56,7 @@
 				<include name="attribute-groups.xml" />
 				<include name="searchable-attributes.xml" />
 				<include name="table-attributes.xml" />
+				<include name="submission-attributes.xml" />
 			</classes>
 			<fileset dir="${webdir}" />
 		</war>
