*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@907 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/tast.properties
+++ b/src/tast.properties
@@ -2,11 +2,8 @@
 sql.scriptdir = /home/juri/sql/
 
 #maps
-#mapserver.mapfile.skeleton = /home/juri/gis/tast_map_skeleton.map
-#mapserver.mapfile.output = /home/juri/gis/map_{TIME}.map
-mapserver.mapfile.dir = C:\\Documents and Settings\\jzich\\My Documents\\tast\\maps\\wgs84
-mapserver.mapfile.skeleton = ${mapserver.mapfile.dir}\\tast_map_skeleton.map
-mapserver.mapfile.output = ${mapserver.mapfile.dir}\\map_{TIME}.map
+map.default.center.x = 0
+map.default.center.y = 0
 map.layer.status.continents.userlabel=Continents
 map.layer.status.boundries.userlabel=Boundries
 map.layer.status.boundries.default=OFF
@@ -17,37 +14,6 @@ map.layer.status.winds.default=OFF
 map.layer.status.flows.userlabel=Water flows
 map.layer.status.flows.default=OFF
 map.layer.status.regions.userlabel=Regions
-
-
-# this should be clear, also it depends on the
-# selected projection
-map.default.extent.x.min = -100
-map.default.extent.x.max = 40
-map.default.extent.y.min = -40
-map.default.extent.y.max = 50
-
-# This determines the farthest and the closest view on
-# the map. The scale on the map is implemented as an
-# integer defined as
-#
-#   scale = px/real * map.scale.factor
-#
-# The smallest value is always 1 and it the the farthest
-# view on the map. The largest value is the closest view
-# on the map as is given by map.max.magnification. Thus:
-#
-#       realscale (i.e. px/real)        scale (strored)
-#
-#                1
-# min =   ----------------     <-->           1 
-#         map.scale.factor
-#
-#       map.max.magnification
-# max = ---------------------  <-->  map.max.magnification 
-#         map.scale.factor
-#
-map.scale.factor = 4
-map.max.magnification = 500
 
 #images
 #images.dir = D:\\Library\\SlaveTrade\\projects\\.metadata\\.plugins\\org.eclipse.wst.server.core\\tmp0\\webapps\\TransAtlanticSlaveTrade\\images
