*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@926 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -86,11 +86,9 @@
 		<servlet-name>ThumbnailServlet</servlet-name>
 		<url-pattern>/servlet/thumbnail</url-pattern>
 	</servlet-mapping>
+	
+	<welcome-file-list>
+		<welcome-file>index.faces</welcome-file>
+	</welcome-file-list>
 
-<!-- 
-	<servlet-mapping>
-		<servlet-name>TestServlet</servlet-name>
-		<url-pattern>/servlet/test</url-pattern>
-	</servlet-mapping>
- -->	
 </web-app>
