*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@928 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -264,6 +264,10 @@ images_next_detail_image=Next image »
 images_prev_detail_image=« Previous image 
 images_back=Go back
 images_all_categories=All categories
+images_related_voyages=Related voyages
+images_voyage_id=Voyage ID = 
+images_shipname_unknown=ship name unknown 
+images_year_unknown=year unknown 
 
 #slaves
 components_names_attributes_id=ID
