--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -2,6 +2,7 @@
 database_voyage_voyagedetail=Voyage ID = 
 database_voyage_voyagevariables=Voyage variables
 database_voyage_voyagemap=Voyage map
+database_voyage_voyageimages=Related images
 database_search_showing=Showing
 database_search_outof=out of
 database_search_showandline=, display 
