*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@942 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -305,6 +305,7 @@ slaves_query_height_from=at least
 slaves_query_height_to=up to
 slaves_query_slave_name=Slave name
 slaves_query_ship_name=Ship name
+slaves_query_voyage_id=Voyage ID
 slaves_query_country=Place of origin
 slaves_query_place=Embarkation and disembarkation  
 slaves_query_captured=Disembarkation
