*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@957 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -272,6 +272,9 @@ images_voyage_id=Voyage ID =
 images_shipname_unknown=ship name unknown 
 images_year_unknown=year unknown 
 
+images_current_query=Current query
+images_current_no_query=There are currently no conditions in your query.
+
 #slaves
 components_names_attributes_id=ID
 components_names_attributes_voyageid=Voyage ID
