--- a/src/tast.properties
+++ b/src/tast.properties
@@ -19,7 +19,7 @@ map.layer.status.regions.userlabel=Regions
 #images.dir = D:\\Library\\SlaveTrade\\projects\\.metadata\\.plugins\\org.eclipse.wst.server.core\\tmp0\\webapps\\TransAtlanticSlaveTrade\\images
 #images.dir = /home/juri/workspace/tast/WebContent/images
 #images.dir = D:\\Emory\\TAST\\projects\\.metadata\\.plugins\\org.eclipse.wst.server.core\\tmp0\\webapps\\tast\\images
-images.dir = C:\\Documents and Settings\\jzich\\My Documents\\TAST\\projects\\.metadata\\.plugins\\org.eclipse.wst.server.core\\tmp0\\webapps\\tast\\images-database
+images.dir = c:\\Documents and Settings\\pjurczy\\projects\\.metadata\\.plugins\\org.eclipse.wst.server.core\\tmp0\\webapps\\tast\\images-database
 images.title.maxlen = 200
 images.creator.maxlen = 200
 images.source.maxlen = 500
