*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@966 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -44,6 +44,7 @@ database_search_customgraphs=Custom graphs
 database_search_summarystats=Summary statistics
 database_search_maps=Maps
 database_search_selecttimeframe=Select time frame
+database_search_selectrevision=Select database revision
 database_search_expected=Results: {0,number,#,###,###}
 
 #Resources for estimates (estimates directory in Web-inf)
