--- a/src/tast.properties
+++ b/src/tast.properties
@@ -1,6 +1,9 @@
 #SQL scripts configuration - will be ecected every time the tomcat starts
 sql.scriptdir = /home/juri/sql/
 
+#Default revision (selected by default in database search)
+database.defaultrevision=1
+
 #maps
 map.default.center.x = 0
 map.default.center.y = 0
