--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -39,6 +39,7 @@ database_search_searchbutton=Search
 database_search_newquery=New query
 database_search_history=History
 database_search_listing=Result listing
+database_search_tableview=Table
 database_search_timeline=Timeline
 database_search_customgraphs=Custom graphs
 database_search_summarystats=Summary statistics
@@ -46,6 +47,12 @@ database_search_maps=Maps
 database_search_selecttimeframe=Select time frame
 database_search_selectrevision=Select database revision
 database_search_expected=Results: {0,number,#,###,###}
+database_tableview_sum=Sum
+database_tableview_avg=Avg
+database_tableview_count=Count
+database_tableview_totals=Totals
+database_tableview_averages=Average
+
 
 #Resources for estimates (estimates directory in Web-inf)
 estimates_table_natcarier=National carriers
