*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@973 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -52,6 +52,8 @@ database_tableview_avg=Avg
 database_tableview_count=Count
 database_tableview_totals=Totals
 database_tableview_averages=Average
+database_tableview_expports=Export ports
+database_tableview_impports=Import ports
 
 
 #Resources for estimates (estimates directory in Web-inf)
