*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@974 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -216,7 +216,7 @@ components_timeline_stat_averagedeaths=Average slave deaths
 components_timeline_stat_mortrate=Slave mortality rate
 components_statistictab_slavemb=Slaves embarked
 components_statistictab_slavdisemb=Slaves disembarked
-components_statistictab_slavdead=Share of slaves embarked who died during voyage 
+components_statistictab_slavdead=Percentage of slaves embarked who died during voyage 
 components_statistictab_lenmiddlepass=Length of Middle Passage (in days) 
 components_statistictab_percentmale=Percentage male
 components_statistictab_percentchil=Percentage children 
@@ -226,6 +226,7 @@ components_statistictab_total_slaves=Total slaves
 components_statistictab_total_voyages=Total voyages
 components_statistictab_average=Average
 components_statistictab_notavailable=not available
+components_statistictab_deviation=Standard deviation
 components_table_compoundattr=Compound attribute
 components_table_missingid=MISSING
 components_detailmap_location=Location
