*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@981 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -57,7 +57,7 @@ database_tableview_impports=Import ports
 
 
 #Resources for estimates (estimates directory in Web-inf)
-estimates_table_natcarier=National carriers
+estimates_table_natcarier=Flag
 estimates_table_expregions=Export regions
 estimates_table_impregions=Broad import regions
 estimates_table_impregionsbreakdown=Specific import regions
@@ -77,7 +77,7 @@ estimates_table_omitempty=Omit empty
 estimates_left_timeframe=Time frame
 estimates_left_from=Show data only from
 estimates_left_to=to
-estimates_left_natcarriers=National carriers
+estimates_left_natcarriers=Flag
 estimates_left_expregions=Export regions
 estimates_left_impregions=Import regions
 estimates_left_currentquery=Current query
